<resources>
    <string name="app_name">Timetable for HSE FE</string>
    <string name="inputEditText_hint">Input number of elements</string>
    <string name="button1_text">Button1</string>
    <string name="button2_text">Button2</string>
    <string name="resultTextView_initial">Result</string>
    <string name="resultTextView_result1">Result1: %1$d</string>
    <string name="resultTextView_result2">Result2: %1$d</string>
    <string name="inputEditText_error_no_text">NOT ALLOWED TO BE BLANK</string>
    <string name="inputEditText_error_not_only_digits">YOU HAVE TO USE DIGITS</string>
    <string name="toast_valueTooBig">THE GIVEN VALUE IS TOO BIG</string>
    <string name="hse_logo_hint">HSE LOGO</string>
    <string name="studentScheduleButton_text">Расписание для студента</string>
    <string name="teacherScheduleButton_text">Расписание для преподавателя</string>
    <string name="studentSchedule_toast">Расписание для студента</string>
    <string name="demoButton_text">DEMO</string>
    <string name="teacherSpinnerLabel_text">Выберите преподавателя:</string>
    <string name="timeLabel_text">Сейчас: %1$s</string>
    <string name="currentLessonStateLabelNo_text">Не идёт пара</string>
    <string name="currentLessonStateLabelYes_text">Идёт пара</string>
    <string name="disciplineLabel_text">Дисциплина</string>
    <string name="cabinetLabel_text">Кабинет</string>
    <string name="buildingLabel_text">Корпус</string>
    <string name="teacherLabel_text">Преподаватель</string>
    <string name="dayScheduleButton_text">Расписание на день</string>
    <string name="weekScheduleButton_text">Расписание на неделю</string>
    <string name="studentSpinnerLabel_text">Выберите группу:</string>
    <string name="preferenceButton_text">Настройки</string>
    <string name="userPhotoFileNamePrefix">JPEG_%1$s</string>
    <string name="userPhotoFileNameSuffix">.jpg</string>
    <string name="userPhotoSharedPreferencesKey">UserPhoto</string>
    <string name="nameSharedPreferencesKey">UserName</string>
    <string name="sharedPreferencesGetDefaultValue"> </string>
    <string name="cameraPermissionToast_text">Для того, чтобы добавить изображение, необходим доступ к камере</string>
    <string name="userDataSavedToast_text">Данные сохранены!</string>
    <string name="avatarLabel_text">Укажите фото</string>
    <string name="createPhotoButton_text">Сделать фото</string>
    <string name="nameEditText_hint">Введите имя</string>
    <string name="currentLightLabel_text">Текущая освещенность: %1$f</string>
    <string name="saveButton_text">Сохранить</string>
    <string name="sensorsListLabel_text">Список датчиков: %1$s</string>
    <string name="transferDateFormat">yyyy.MM.dd</string>
    <string name="scheduleItemDateFormat">HH:mm</string>
    <string name="scheduleHeaderDateFormat">EEEE, dd MMM</string>
    <string name="timeTextViewDateFormat">EEEE, dd.MM</string>
    <string name="parseResponseDateFormat">yyyy-MM-dd HH:mm:ss.SSS</string>
    <string name="showTimeDateFormat">HH:mm, EEEE</string>
    <string name="apiTimeUrl">https://api.ipgeolocation.io/ipgeo?apiKey=b03018f75ed94023a005637878ec0977</string>
</resources>