<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/teacherSpinnerLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/teacherSpinnerLabel_text" />

        <Spinner
            android:id="@+id/teacherSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" />

        <TextView
            android:id="@+id/timeLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timeLabel_text" />

        <TextView
            android:id="@+id/currentLessonStateLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/currentLessonStateLabelNo_text" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/middleLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="300dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topLayout">

        <TextView
            android:id="@+id/disciplineLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disciplineLabel_text" />

        <TextView
            android:id="@+id/cabinetLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cabinetLabel_text" />

        <TextView
            android:id="@+id/buildingLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buildingLabel_text" />

        <TextView
            android:id="@+id/teacherLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/teacherLabel_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dayScheduleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="50"
                android:text="@string/dayScheduleButton_text" />

            <Button
                android:id="@+id/weekScheduleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="50"
                android:text="@string/weekScheduleButton_text" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>