<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".activity.DemoActivity">

    <EditText
        android:id="@+id/inputTextEdit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/inputEditText_hint"
        android:inputType="number" />

    <Button
        android:id="@+id/button1"
        android:layout_width="206dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:lines="2"
        android:text="@string/button1_text" />

    <Button
        android:id="@+id/button2"
        android:layout_width="207dp"
        android:layout_height="wrap_content"
        android:text="@string/button2_text" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        tools:text="@string/resultTextView_initial" />

</LinearLayout>