<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="319dp"
        android:layout_height="451dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/hse_logo_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_hse" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.9"
        tools:layout_editor_absoluteX="141dp">

        <Button
            android:id="@+id/studentScheduleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/studentScheduleButton_text" />

        <Button
            android:id="@+id/teacherScheduleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teacherScheduleButton_text" />

        <Button
            android:id="@+id/preferenceButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preferenceButton_text" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>