<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/currentIlluminance"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:id="@+id/leftLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:orientation="vertical"
            android:paddingLeft="10dp">

            <TextView
                android:id="@+id/avatarLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/avatarLabel_text" />

            <ImageView
                android:id="@+id/avatarImageView"
                android:layout_width="150dp"
                android:layout_height="156dp"
                android:layout_weight="1"
                tools:srcCompat="@tools:sample/avatars" />

            <Button
                android:id="@+id/createPhotoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/createPhotoButton_text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rightLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:orientation="vertical"
            android:paddingRight="10dp">

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/nameEditText_hint" />

            <TextView
                android:id="@+id/currentLightLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/currentLightLabel_text" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/saveButton_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topLayout" />

    <TextView
        android:id="@+id/sensorsListLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/sensorsListLabel_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveButton" />

</androidx.constraintlayout.widget.ConstraintLayout>